fixed a few sonar violations (var with Java 11)